Bug 329495 - Gwenview 'Examining Finished' noification when starts up
Summary: Gwenview 'Examining Finished' noification when starts up
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-01 05:52 UTC by Gonzalo
Modified: 2014-02-07 10:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments
Gwenview sends a notification when starts. (225.44 KB, image/png)
2014-01-01 05:52 UTC, Gonzalo
Details
Reproduction. (58.12 KB, image/png)
2014-01-03 12:11 UTC, Simon Oroño
Details
Backtrace (5.10 KB, application/octet-stream)
2014-02-05 17:31 UTC, Nikola Schnelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gonzalo 2014-01-01 05:52:19 UTC
Created attachment 84390 [details]
Gwenview sends a notification when starts.

There's a notification every time I open gwenview. It says "Examining [Finished]". I'm not sure,  but think it's a bug.
The terminal says:
$ gwenview
Object::connect: No such signal org::freedesktop::UPower::DeviceAdded(QDBusObjectPath)
Object::connect: No such signal org::freedesktop::UPower::DeviceRemoved(QDBusObjectPath)
gwenview(27713) KSharedUiServerProxy::KSharedUiServerProxy: kuiserver registered
gwenview(27713)/kdeui (kdelibs): Attempt to use QAction "edit_redo" with KXMLGUIFactory! 
gwenview(27713)/kdeui (kdelibs): Attempt to use QAction "edit_undo" with KXMLGUIFactory! 

I've erased the following files but it didn't work:
$HOME/.kde4/share/apps/gwenview/*
$HOME/.kde4/share/config/gwenviewrc

Regards!
Comment 1 Simon Oroño 2014-01-03 12:11:01 UTC
Created attachment 84429 [details]
Reproduction.

The same happening here. Using KDE 4.12.0.
Comment 2 Gonzalo 2014-01-28 22:47:35 UTC
Solved with gwenview-4.12.1-2
Comment 3 Gonzalo 2014-01-28 22:49:28 UTC
(In reply to comment #2)
> Solved with gwenview-4.12.1-2

Oh, Sorry, It still sends the same notification :(
Comment 4 Yichao Zhou 2014-02-01 13:14:07 UTC
Confirmed here.
Comment 5 Aurelien Gateau 2014-02-05 15:09:02 UTC
A bit of research leads me to think the message comes from this method:

http://lxr.kde.org/source/kde/kdelibs/kio/kio/job.cpp#150

Can you run Gwenview through gdb, set a breakpoint on the function and get a backtrace?

Assuming you have kdelibs and gwenview debug packages installed, you should be able to do this like this:

1. start Gwenview with gdb. Open a terminal and type:
    gdb gwenview

2. within gdb, type the following to set the breakpoint:
    start
    b job.cpp:152

3. make gwenview run with:
    continue

4. assuming gwenview is stopped because it hit the breakpoint, print the backtrace with:
    bt

5. copy and paste the backtrace here
Comment 6 Nikola Schnelle 2014-02-05 15:41:41 UTC
I hope this is good. I had no idea what I was doing. Just did copy/paste your instructions :)

http://pastebin.kde.org/psarq4wpe
Comment 7 Aurelien Gateau 2014-02-05 16:42:05 UTC
(In reply to comment #6)
> I hope this is good. I had no idea what I was doing. Just did copy/paste
> your instructions :)
> 
> http://pastebin.kde.org/psarq4wpe

Yes, that's good, thanks!
You might want to attach the backtrace to this bug to avoid it going away when pastebin gets rid of it.
Comment 8 Nikola Schnelle 2014-02-05 17:31:26 UTC
Created attachment 85008 [details]
Backtrace
Comment 9 Aurelien Gateau 2014-02-07 10:47:10 UTC
Git commit a87432a4d2ddfbfea6ceb538687497cfd5170a19 by Aurélien Gâteau.
Committed on 07/02/2014 at 10:44.
Pushed by gateau into branch 'KDE/4.12'.

Do not try to guess mime-type of empty urls

This avoids the strange "Examining [Finished]" notifications.
FIXED-IN: 4.12.3

M  +3    -0    lib/mimetypeutils.cpp

http://commits.kde.org/gwenview/a87432a4d2ddfbfea6ceb538687497cfd5170a19