Do not try to guess mime-type of empty urls

This avoids the strange "Examining [Finished]" notifications.

BUG: 329495
FIXED-IN: 4.12.3